# Blackbone

./: .gitignore  CMakeLists.txt  index.js  package.json
src/BlackBone/: BlackBone.vcxproj  BlackBone.vcxproj.filters  CMakeLists.txt
src/BlackBone/addon/: addon.cc
src/node/: blackbone.cc
